<resources>
    <string name="app_name">CleanUp Stars</string>
    <string name="action_settings">Settings</string>
    <string name="store_user_tag">User</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="saved_user_tag">-1</string>
    <string name="saved_user_default">-1</string>

    <!-- Log in Fragment -->
    <string name="log_in_title">Log in</string>
    <string name="create_account_btn">Create Account</string>
    <string name="log_in_error">Incorrect Email or Password</string>
    <string name="log_in_btn">Log in</string>

    <!-- Create account Fragment -->
    <string name="create_account_submit_title">Create Account</string>
    <string name="create_account_submit_btn">Create Account</string>


    <!-- User Home Fragment -->
    <string name="user_home_title">User Home</string>
    <string name="event_management_btn">Events near by</string>


    <!-- Event management Activity -->
    <string name="event_management_name">Events</string>


    <!-- Event List Fragment -->
    <string name="event_list_name">Events</string>


    <!-- Event Collections Fragment -->
    <string name="event_collections_name">Event Collection</string>


    <!-- Create account page -->
    <string name="fnameLabel">First Name</string>
    <string name="lnameLabel">Last Name</string>
    <string name="emailLabel">Email</string>
    <string name="passwordLabel">Password</string>
    <string name="formError">Invalid Information</string>

</resources>
