<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mattbozelka.cleanupstars.CreateAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/create_account_view"
        android:orientation="vertical">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/createFirstName" />

            <TextView
                style="@style/TextViewLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fnameLabel"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/createLastName" />

            <TextView
                style="@style/TextViewLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lnameLabel"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/loginTextEmail" />

            <TextView
                style="@style/TextViewLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emailLabel"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/loginTextPassword" />

            <TextView
                style="@style/TextViewLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passwordLabel"
                android:paddingBottom="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account_submit_btn"
                android:id="@+id/submit_create_account_btn"
                android:layout_gravity="center_horizontal" />

            <TextView
                style="@style/TextError"
                android:id="@+id/error_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formError"
                android:visibility="invisible"/>

    </LinearLayout>

</ScrollView>